--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
    <div id="cities-search-container">
       <label for="search-bar"></label>
       <input type="text" id="search-bar" name="city" placeholder="Enter Your City">
-      <ul id="past-city-result"></ul>
+      <ul id="past-city-results"></ul>
    </div>
-   
-   <div id="weather-data-container"></div>
-   <div id="five-day-container"></div>
+   <div id="weather-data-container">
+      <ul>
+         <li id="date"></li>
+         <li id="icon"></li>
+         <li id="wind"></li>
+         <li id="temp"></li>
+         <li id="humidity"></li>
+         <li id="city-name"></li>
+      </ul>
+   </div>
+   <div id="five-day-container">
+      <ul>
+         <li id="five-date"></li>
+         <li id="five-icon"></li>
+         <li id="five-wind"></li>
+         <li id="five-temp"></li>
+         <li id="five-humidity"></li>
+      </ul>
+   </div>
 
 <script src="./assets/js/main.js"></script>
 </body>
