--- a/index.html
+++ b/index.html
@@ -5,40 +5,28 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Weather App</title>
+   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <header>
-   <h1> Weather Console</h1>
+   <h1>Weather Dashboard</h1>
 </header>
 
 <body>
-
    <div id="cities-search-container">
-      <label for="search-bar"></label>
-      <input type="text" id="search-bar" name="city" placeholder="Enter Your City">
-      <ul id="past-city-results"></ul>
+      <label id="search-label" for="search-bar">Search for a city name:</label>
+      <div id ="search-container">
+         <input type="text" id="search-bar-input" name="city" placeholder="Enter Your City">
+         <button type="button" id="submit">Search</button>
+         <button type="button" id="clear">Clear</button>
+      </div>
+      <div id ="past-cities-container"></div>
    </div>
-   <div id="weather-data-container">
-      <ul>
-         <li id="date"></li>
-         <li id="icon"></li>
-         <li id="wind"></li>
-         <li id="temp"></li>
-         <li id="humidity"></li>
-         <li id="city-name"></li>
-      </ul>
-   </div>
-   <div id="five-day-container">
-      <ul>
-         <li id="five-date"></li>
-         <li id="five-icon"></li>
-         <li id="five-wind"></li>
-         <li id="five-temp"></li>
-         <li id="five-humidity"></li>
-      </ul>
+   <div id="results-wrapper">
+      <div id="weather-data-container"></div>
+      <div id="five-day-container"></div>
    </div>
 
-<script src="./assets/js/main.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 
 </html>
